--- a/fern/docs/pages/overview/quickstart.mdx
+++ b/fern/docs/pages/overview/quickstart.mdx
@@ -11,7 +11,7 @@ python3.11 -m venv .venv && source .venv/bin/activate && \
 pip install --upgrade pip poetry && poetry install --with ui,local && ./scripts/setup
 
 # Launch the privateGPT API server **and** the gradio UI
-poetry run python3.11 -m private_gpt
+poetry run python3.11 -m personal_gpt
 
 # In another terminal, create a new browser window on your private GPT!
 open http://127.0.0.1:8001/
@@ -26,5 +26,5 @@ call .venv\Scripts\activate.bat
 python -m pip install --upgrade pip poetry
 poetry install --with "ui,local"
 python scripts\setup
-poetry run python -m private_gpt
+poetry run python -m personal_gpt
 ```
